fix bug 161701 - stop using prefs to save the last page visited instead, use mork's MetaRow and store it in the kLastVisitedPage token r=bnesse, sr=bienvenu